js/src/tests/test262/built-ins/Number/NEGATIVE_INFINITY/S15.7.3.5_A1.js
if
(
isFinite
(
Number
.
NEGATIVE_INFINITY
)
!
=
=
false
)
{
throw
new
Test262Error
(
'
#
1
:
Number
.
NEGATIVE_INFINITY
=
=
=
Not
-
a
-
Finite
'
)
;
}
else
{
if
(
(
Number
.
NEGATIVE_INFINITY
<
0
)
!
=
=
true
)
{
throw
new
Test262Error
(
'
#
1
:
Number
.
NEGATIVE_INFINITY
=
=
=
-
Infinity
'
)
;
}
}
reportCompare
(
0
0
)
;
